Wed Dec 11 15:36:15 2013  Aman Gupta <ruby@tmm1.net>

	* compile.c (iseq_specialized_instruction): emit opt_aset instruction
	  to optimize Hash#[]= and Array#[]= when called with Fixnum argument.
	  [Bug #9227] [ruby-core:58956]

Wed Dec 11 12:38:17 2013  Koichi Sasada  <ko1@atdot.net>

	* eval.c (rb_raise_jump): pop frame after setup exception.
	  Patches by deivid (David Rodriguez). [Bug #8886]

	* test/minitest/test_minitest_unit.rb: catch up this change.

	* test/ruby/test_backtrace.rb: ditto.

	* test/ruby/test_settracefunc.rb: ditto.

Wed Dec 11 04:54:03 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master ec8ed22.  Notable changes
	  include:

	  * Renamed extension_install_dir to extension_dir (backwards
	    compatible).

	  * Fixed creation of gem.deps.rb.lock file from
	    TestGemRequestSet#test_install_from_gemdeps_install_dir

	  * Fixed a typo and some documentation.

	* test/rubygems:  ditto.

Wed Dec 11 03:18:08 2013  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* insns.def: Fix optimization bug of Float#/ [Bug #9238]

Tue Dec 10 23:58:30 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/date/date_strptime.c (date__strptime_internal): unset
	  case-insensitive flag for [:alpha:], which already implies both
	  cases, to get rid of backtrack explosion.  [ruby-core:58984]
	  [Bug #9221]

Tue Dec 10 23:44:42 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_hash): add salt to differentiate false and empty
	  array.  [ruby-core:58993] [Bug #9231]

	* hash.c (rb_any_hash, rb_hash_hash): ditto.

Tue Dec 10 18:16:09 2013  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* man/ruby.1: [DOC] Use www.ruby-toolbox.com instead of RAA.

Tue Dec 10 17:21:30 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (wmap_finalize, wmap_aset_update): use simple malloced array
	  instead of T_ARRAY, to reduce GC pressure.

Tue Dec 10 15:56:48 2013  Aman Gupta <ruby@tmm1.net>
